--- a/event_ticketer/package.json
+++ b/event_ticketer/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "npx prisma migrate reset --force && node ./db/seed.js",
-    "start:dev": " nodemon server.js"
+    "start:dev": " nodemon server.js",
+    "start_all": "cd client && npm run build && cd .. && npm run start:dev "
   },
   "keywords": [],
   "author": "",
